# log-sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/log_sentinel/: __init__.py  cli.py  detector.py  parser.py  report.py
tests/: test_detector.py  test_parser.py  test_report.py
