[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "log-sentinel"
version = "1.0.0"
description = "SSH authentication log analyzer that detects brute-force attacks, user enumeration and possible compromises"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "binaryD" }]
keywords = ["security", "logs", "ssh", "intrusion-detection", "blue-team"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
log-sentinel = "log_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
